<resources>
    <string name="app_name">Test Time</string>
    <string name="title_activity_maps">Map</string>

    <!--Login Screen -->
    <string name="continuegoogle">Continue with Google</string>
    <string name="continuefb">Continue with Facebook</string>
    <string name="logintxt">Login</string>
    <string name="continuemobile">Continue with Mobile Number</string>
    <string name="notregisteredtxt">Not registered yet?</string>
    <string name="signuptxt">Sign up now</string>

    <!--Profile Screen -->
    <string name="points">Points</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>

    <!--Signup Screen -->
    <string name="fullnametxt">Full Name</string>
    <string name="emailadresstxt">Email Address</string>
    <string name="mobiletxt">Mobile Number</string>
    <string name="signuptext">Sign-up</string>
    <string name="select_languagetxt">Select Language</string>
    <string name="hinditxt">Hindi</string>
    <string name="englishtxt">English</string>
    <string name="signupbtntext">Sign Up</string>

    <!--OTP Screen -->
    <string name="conitunewithphone">Continue with Phone</string>
    <string name="otptxt">OTP</string>
    <string name="sendotptxt">Send OTP</string>
    <string name="resendotptxt">Resend OTP</string>

    <!--Favourite Subject Screen -->
    <string name="fav_subjext_txt">Choose Your Favourite Subjects</string>
    <string name="save_btntxt">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_leaderboard">LeaderBoard</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_testhistory">Test History</string>
    <string name="boardrollno">Board Registeration Number</string>

</resources>