<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regi_bg"
    tools:context=".Activities.SignUpActivity">

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginTop="@dimen/margin15"
        android:fontFamily="@font/montserratregular"
        android:text="@string/signuptext"
        android:textColor="@color/skyblue"
        android:textSize="33sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/margin140"
        android:layout_height="@dimen/margin140"
        android:layout_marginTop="@dimen/margin20"
        android:src="@drawable/logo2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/signuptext"
        app:layout_constraintTop_toBottomOf="@+id/signuptext"></ImageView>

    <LinearLayout
        android:id="@+id/linear_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin5"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <EditText
            android:id="@+id/name"
            android:layout_width="@dimen/margin300"
            android:layout_height="@dimen/margin50"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/edit_box"
            android:fontFamily="@font/montserratregular"
            android:gravity="center_vertical"
            android:hint="@string/fullnametxt"
            android:paddingLeft="@dimen/margin10"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:textSize="16sp"></EditText>

        <EditText
            android:id="@+id/email"
            android:layout_width="@dimen/margin300"
            android:layout_height="@dimen/margin50"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/edit_box"
            android:fontFamily="@font/montserratregular"
            android:gravity="center_vertical"
            android:hint="@string/emailadresstxt"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/margin10"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:textSize="16sp"></EditText>

        <EditText
            android:id="@+id/mobile"
            android:layout_width="@dimen/margin300"
            android:layout_height="@dimen/margin50"
            android:layout_marginTop="@dimen/margin10"
            android:background="@drawable/edit_box"
            android:fontFamily="@font/montserratregular"
            android:gravity="center_vertical"
            android:hint="@string/mobiletxt"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="@dimen/margin10"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:textSize="16sp"></EditText>

        <Spinner
            android:id="@+id/gender"
            android:layout_width="@dimen/margin300"
            android:layout_height="@dimen/margin50"
            android:layout_marginTop="6dp"
            android:background="@drawable/selector_spinner" />

        <Spinner
            android:id="@+id/classname"
            android:layout_width="@dimen/margin300"
            android:layout_height="@dimen/margin50"
            android:layout_marginTop="6dp"
            android:background="@drawable/selector_spinner" />

        <Spinner
            android:id="@+id/schoolname"
            android:layout_width="@dimen/margin300"
            android:layout_height="@dimen/margin50"
            android:layout_marginTop="6dp"
            android:background="@drawable/selector_spinner" />

        <Spinner
            android:id="@+id/district"
            android:layout_width="@dimen/margin300"
            android:layout_height="@dimen/margin50"
            android:layout_marginTop="6dp"
            android:background="@drawable/selector_spinner" />


        <TextView
            android:layout_width="@dimen/margin300"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:fontFamily="@font/montserratregular"
            android:text="@string/select_languagetxt"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/groupradio"
            android:layout_width="@dimen/margin300"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <!-- In RadioGroup create the 1 Radio Button-->
            <!-- like this we will add some more Radio Button-->
            <RadioButton
                android:id="@+id/radia_id1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:gravity="center_horizontal"
                android:padding="15sp"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin10"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/radio_flat_text_selector"
                android:checked="true"
                android:text="@string/hinditxt"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radia_id2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="15sp"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin10"
                android:fontFamily="@font/montserratregular"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:textColor="@color/radio_flat_text_selector"
                android:text="@string/englishtxt"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="@dimen/margin300"
            android:layout_height="@dimen/margin50"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/montserratregular"
            android:gravity="center"
            android:text="@string/signupbtntext"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/mobile"
            app:layout_constraintTop_toBottomOf="@id/mobile"></Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>