<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/otp_bg">

<View
    android:id="@+id/view"
    android:layout_width="@dimen/margin150"
    android:layout_height="@dimen/margin5"
    android:background="@color/grey"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"></View>

    <TextView
        android:id="@+id/otptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conitunewithphone"
        android:layout_marginTop="@dimen/margin20"
        android:textColor="@color/skyblue"
        android:fontFamily="@font/montserratregular"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"></TextView>
    <EditText
        android:id="@+id/phoneNoeditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin50"
        android:layout_marginTop="@dimen/margin50"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:inputType="number"
        android:fontFamily="@font/montserratregular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otptext"
        android:background="@drawable/edit_box"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:hint="xxxxxxxxxx"
        android:paddingTop="@dimen/margin3"
        android:paddingLeft="@dimen/margin46"
        android:maxLength="10"/>

    <TextView
        android:id="@+id/phnotextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginLeft="@dimen/margin80"
        android:gravity="left"
        android:paddingLeft="@dimen/margin2"
        android:paddingRight="@dimen/margin1"
        android:fontFamily="@font/montserratregular"
        android:background="@color/white"
        android:text="@string/mobiletxt"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneNoeditText"
        app:layout_constraintStart_toStartOf="@+id/phoneNoeditText"
        app:layout_constraintTop_toTopOf="@+id/phoneNoeditText" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:text="+91 - "
        app:layout_constraintStart_toStartOf="@+id/phoneNoeditText"
        app:layout_constraintTop_toBottomOf="@+id/phnotextView"
        android:layout_marginVertical="@dimen/margin8"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/montserratregular"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/margin14"
        />

    <Button
        android:id="@+id/sendotp"
        android:layout_width="@dimen/margin100"
        android:layout_height="@dimen/margin35"
        android:layout_marginBottom="@dimen/margin50"
        android:layout_marginTop="@dimen/margin10"
        android:text="@string/sendotptxt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:textSize="14sp"
        android:fontFamily="@font/montserratregular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/phoneNoeditText"
        app:layout_constraintTop_toBottomOf="@+id/phoneNoeditText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/otpeditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin50"
        android:layout_marginTop="@dimen/margin40"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNoeditText"
        android:background="@drawable/edit_box"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:fontFamily="@font/montserratregular"
        android:hint="OTP Sent"
        android:paddingTop="@dimen/margin5"
        android:paddingLeft="@dimen/margin24"
        android:maxLength="6"/>
    <TextView
        android:id="@+id/otptextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginLeft="@dimen/margin80"
        android:gravity="left"
        android:paddingLeft="@dimen/margin2"
        android:paddingRight="@dimen/margin1"
        android:background="@color/white"
        android:text="@string/otptxt"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/montserratregular"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/otpeditText"
        app:layout_constraintStart_toStartOf="@+id/otpeditText"
        app:layout_constraintTop_toTopOf="@+id/otpeditText" />

    <TextView
        android:id="@+id/resendTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginBottom="@dimen/margin50"
        android:text="@string/resendotptxt"
        android:textColor="@color/skyblue"
        android:textSize="15sp"
        android:fontFamily="@font/montserratregular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/otpeditText"
        app:layout_constraintTop_toBottomOf="@+id/otpeditText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="@dimen/margin150"
        android:layout_height="@dimen/margin45"
        android:layout_marginBottom="@dimen/margin50"
        android:layout_marginTop="@dimen/margin10"
        android:text="@string/logintxt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:textSize="15sp"
        android:fontFamily="@font/montserratregular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendTxtView"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>